--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,14 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
+    // Logging
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
+    implementation 'org.slf4j:slf4j-api:1.7.33'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
+
     implementation 'org.apache.poi:poi:5.2.0'
+    implementation 'org.apache.poi:poi-ooxml:5.2.0'
 }
 
 application {
