--- a/app/src/main/resources/log4j2.yml
+++ b/app/src/main/resources/log4j2.yml
@@ -1,3 +1,4 @@
+
 Configutation:
   name: Default
   status: warn
@@ -12,35 +13,39 @@ Configutation:
       name: Console_Appender
       target: SYSTEM_OUT
       PatternLayout:
-        pattern: "[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n"
+        pattern: "%highlight{[%-5level]} %d{yyyy-MM-dd HH:mm:ss.SSS} [%t][%F] %c{1} - %msg%n"
+        disableAnsi: false
     File:
       name: File_Appender
       fileName: ${log-path}/logfile.log
       PatternLayout:
-        pattern: "[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n"
+        pattern: "[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t][%F] %c{1} - %msg%n"
     RollingFile:
-      - name: RollingFile_Appender
-        fileName: ${log-path}/rollingfile.log
-        filePattern: "logs/archive/rollingfile.log.%d{yyyy-MM-dd-hh-mm}.gz"
-        PatternLayout:
-          pattern: "[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n"
-        Policies:
-          SizeBasedTriggeringPolicy:
-            size: 1 KB
-        DefaultRollOverStrategy:
-          max: 30
+      name: RollingFile_Appender
+      fileName: ${log-path}/rollingfile.log
+      filePattern: "logs/archive/rollingfile.log.%d{yyyy-MM-dd-hh-mm}_%i.gz"
+      PatternLayout:
+        pattern: "[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t][%F] %c{1} - %msg%n"
+      Policies:
+        SizeBasedTriggeringPolicy:
+          size: "200KB"
+        TimeBasedTriggeringPolicy:
+          interval: "30"
+      DefaultRollOverStrategy:
+        max: "30"
+        fileIndex: "max"
   Loggers:
     Root:
       level: info
       AppenderRef:
         - ref: Console_Appender
         - ref: File_Appender
-        - ref: RollingFile_Appender
+#        - ref: RollingFile_Appender
     Logger:
-      - name: edu.project
-        additivity: false
-        level: debug
-        AppenderRef:
-          - ref: Console_Appender
-          - ref: File_Appender
-          - ref: RollingFile_Appender
+      name: com.example
+      additivity: false
+      level: debug
+      AppenderRef:
+        - ref: Console_Appender
+        - ref: File_Appender
+#        - ref: RollingFile_Appender
