--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,16 +16,22 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
     // Logging
-    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
-    implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
-    implementation 'org.slf4j:slf4j-api:1.7.33'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.17.1'
+
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.13.1'
+
+    implementation group: 'org.apache.tika', name: 'tika-core', version: '2.3.0'
+    implementation group: 'org.jclarion', name: 'image4j', version: '0.7'
+
 
     implementation 'org.apache.poi:poi:5.2.0'
     implementation 'org.apache.poi:poi-ooxml:5.2.0'
@@ -37,5 +43,5 @@ application {
 }
 
 test {
-    useJUnitPlatform();
+    useJUnitPlatform()
 }
