--- a/app/src/main/resources/log4j2.yml
+++ b/app/src/main/resources/log4j2.yml
@@ -45,7 +45,7 @@ Configutation:
         - ref: File_Appender
 #        - ref: RollingFile_Appender
     Logger:
-      name: com.example
+      name: io.oikk
       additivity: false
       level: debug
       AppenderRef:
