--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,18 +9,23 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id "io.freefair.lombok" version "6.4.3.1"
 }
 
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
-
+configurations {
+    all{
+        exclude module: 'org.hamcrest'
+    }
+}
 
 dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.7.0'
-
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.23.1'
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
     // Logging
@@ -39,7 +44,6 @@ dependencies {
     implementation 'org.apache.poi:poi-ooxml:5.2.0'
 
     implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
-    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
 }
 
 application {
