--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
-    id "io.freefair.lombok" version "6.4.3.1"
+    id "io.freefair.lombok" version "6.5.0.2"
 }
 
 repositories {
@@ -17,21 +17,17 @@ repositories {
     mavenCentral()
 }
 configurations {
-    all{
-        exclude module: 'org.hamcrest'
-    }
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
-    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.7.0'
-    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.23.1'
+
+
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
     // Logging
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.17.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.17.2'
 
     implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.13.1'
 
@@ -43,7 +39,9 @@ dependencies {
     implementation 'org.apache.poi:poi:5.2.0'
     implementation 'org.apache.poi:poi-ooxml:5.2.0'
 
-    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
+    // Use JUnit Jupiter for testing.
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    testImplementation 'org.assertj:assertj-core:3.23.1'
 }
 
 application {
