chore: Add queryDSL configutation
queryDSL 설정과 간단한 테스트 파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -257,3 +257,5 @@ gradle-app.setting
 **/build/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,intellij+all,jetbrains+all,java,gradle
+
+generated
