--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,8 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.17.2'
 
-    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.13.1'
-
-    implementation group: 'org.apache.tika', name: 'tika-core', version: '2.3.0'
-    implementation group: 'org.jclarion', name: 'image4j', version: '0.7'
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.13.4'
+    implementation 'org.yaml:snakeyaml:1.32'
 
     // document
     implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.25'
